ffi/poc/cpp/corpus/include/ak_abi.h


typedef struct ak_enc_ctx ak_enc_ctx;
typedef struct ak_dec_ctx ak_dec_ctx;
typedef int32_t (*ak_loop_f)(ak_enc_ctx *ctx, const void *obj, int64_t token);
struct ak_str {
  const void *data;
  size_t len;
  ak_transcode_fn tc;
};
typedef struct ak_str ak_str;
struct ak_span {
  uint32_t off;
  uint32_t len;
  uint32_t coder;
};
typedef struct ak_span ak_span;
struct ak_blob {
  const void *data;
  size_t len;
};
typedef struct ak_blob ak_blob;
struct ak_dfix_TaskOptionsOptionsEntry {
  struct ak_span key;
  struct ak_span value;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_efix_Timestamp {
  int64_t seconds;
  int32_t nanos;
  uint32_t presence;
};
struct ak_ufix_Timestamp {
  int64_t seconds;
  int32_t nanos;
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_Duration {
  int64_t seconds;
  int32_t nanos;
  uint32_t presence;
};
struct ak_ufix_Duration {
  int64_t seconds;
  int32_t nanos;
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_TaskOptions {
  struct ak_efix_Duration max_duration;
  int32_t max_retries;
  int32_t priority;
  struct ak_str partition_id;
  struct ak_str application_name;
  struct ak_str application_version;
  struct ak_str application_namespace;
  struct ak_str application_service;
  struct ak_str engine_type;
  uint32_t presence;
};
struct ak_ufix_TaskOptions {
  struct ak_ufix_Duration max_duration;
  int32_t max_retries;
  int32_t priority;
  struct ak_str partition_id;
  struct ak_str application_name;
  struct ak_str application_version;
  struct ak_str application_namespace;
  struct ak_str application_service;
  struct ak_str engine_type;
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_TaskOutput {
  uint8_t success;
  struct ak_str error;
  uint32_t presence;
};
struct ak_ufix_TaskOutput {
  uint8_t success;
  struct ak_str error;
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_TaskDetailed {
  struct ak_str id;
  struct ak_str session_id;
  struct ak_str owner_pod_id;
  int32_t status;
  struct ak_str status_message;
  struct ak_efix_TaskOptions options;
  struct ak_efix_Timestamp created_at;
  struct ak_efix_Timestamp submitted_at;
  struct ak_efix_Timestamp started_at;
  struct ak_efix_Timestamp ended_at;
  struct ak_efix_Timestamp pod_ttl;
  struct ak_efix_TaskOutput output;
  struct ak_str pod_hostname;
  struct ak_efix_Timestamp received_at;
  struct ak_efix_Timestamp acquired_at;
  struct ak_efix_Duration creation_to_end_duration;
  struct ak_efix_Duration processing_to_end_duration;
  struct ak_str initial_task_id;
  struct ak_efix_Duration received_to_end_duration;
  struct ak_efix_Timestamp processed_at;
  struct ak_efix_Timestamp fetched_at;
  struct ak_str payload_id;
  struct ak_str created_by;
  uint32_t presence;
};
struct ak_dfix_TaskDetailed {
  struct ak_span id;
  struct ak_span session_id;
  struct ak_span owner_pod_id;
  int32_t status;
  struct ak_span status_message;
  struct ak_dfix_TaskOptions options;
  struct ak_dfix_Timestamp created_at;
  struct ak_dfix_Timestamp submitted_at;
  struct ak_dfix_Timestamp started_at;
  struct ak_dfix_Timestamp ended_at;
  struct ak_dfix_Timestamp pod_ttl;
  struct ak_dfix_TaskOutput output;
  struct ak_span pod_hostname;
  struct ak_dfix_Timestamp received_at;
  struct ak_dfix_Timestamp acquired_at;
  struct ak_dfix_Duration creation_to_end_duration;
  struct ak_dfix_Duration processing_to_end_duration;
  struct ak_span initial_task_id;
  struct ak_dfix_Duration received_to_end_duration;
  struct ak_dfix_Timestamp processed_at;
  struct ak_dfix_Timestamp fetched_at;
  struct ak_span payload_id;
  struct ak_span created_by;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_TaskDetailed {
  struct ak_str id;
  struct ak_str session_id;
  struct ak_str owner_pod_id;
  int32_t status;
  struct ak_str status_message;
  struct ak_ufix_TaskOptions options;
  struct ak_ufix_Timestamp created_at;
  struct ak_ufix_Timestamp submitted_at;
  struct ak_ufix_Timestamp started_at;
  struct ak_ufix_Timestamp ended_at;
  struct ak_ufix_Timestamp pod_ttl;
  struct ak_ufix_TaskOutput output;
  struct ak_str pod_hostname;
  struct ak_ufix_Timestamp received_at;
  struct ak_ufix_Timestamp acquired_at;
  struct ak_ufix_Duration creation_to_end_duration;
  struct ak_ufix_Duration processing_to_end_duration;
  struct ak_str initial_task_id;
  struct ak_ufix_Duration received_to_end_duration;
  struct ak_ufix_Timestamp processed_at;
  struct ak_ufix_Timestamp fetched_at;
  struct ak_str payload_id;
  struct ak_str created_by;
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_TaskSummary {
  struct ak_str id;
  struct ak_str session_id;
  struct ak_efix_TaskOptions options;
  int32_t status;
  struct ak_efix_Timestamp created_at;
  struct ak_str error;
  struct ak_str status_message;
  int64_t count_data_dependencies;
  uint32_t presence;
};
struct ak_dfix_TaskSummary {
  struct ak_span id;
  struct ak_span session_id;
  struct ak_dfix_TaskOptions options;
  int32_t status;
  struct ak_dfix_Timestamp created_at;
  struct ak_span error;
  struct ak_span status_message;
  int64_t count_data_dependencies;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_TaskSummary {
  struct ak_str id;
  struct ak_str session_id;
  struct ak_ufix_TaskOptions options;
  int32_t status;
  struct ak_ufix_Timestamp created_at;
  struct ak_str error;
  struct ak_str status_message;
  int64_t count_data_dependencies;
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_Empty {
  uint32_t presence;
};
struct ak_dfix_Empty {
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_Empty {
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_Probe {
  struct ak_str id;
  int32_t opt_count;
  struct ak_str opt_label;
  uint8_t opt_flag;
  uint32_t body_case;
  int64_t body_as_int;
  struct ak_str body_as_text;
  struct ak_str body_as_blob;
  struct ak_efix_Timestamp body_as_stamp;
  struct ak_efix_Empty body_as_nothing;
  uint32_t presence;
};
struct ak_dfix_Probe {
  struct ak_span id;
  int32_t opt_count;
  struct ak_span opt_label;
  uint8_t opt_flag;
  uint32_t body_case;
  int64_t body_as_int;
  struct ak_span body_as_text;
  struct ak_span body_as_blob;
  struct ak_dfix_Timestamp body_as_stamp;
  struct ak_dfix_Empty body_as_nothing;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_Probe {
  struct ak_str id;
  int32_t opt_count;
  struct ak_str opt_label;
  uint8_t opt_flag;
  uint32_t body_case;
  int64_t body_as_int;
  struct ak_str body_as_text;
  struct ak_str body_as_blob;
  struct ak_ufix_Timestamp body_as_stamp;
  struct ak_ufix_Empty body_as_nothing;
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_UploadResultData {
  struct ak_str session_id;
  struct ak_str result_id;
  struct ak_str data_chunk;
  uint32_t presence;
};
struct ak_dfix_UploadResultData {
  struct ak_span session_id;
  struct ak_span result_id;
  struct ak_span data_chunk;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_UploadResultData {
  struct ak_str session_id;
  struct ak_str result_id;
  struct ak_str data_chunk;
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_MetricsBatch {
  struct ak_str id;
  uint32_t presence;
};
struct ak_dfix_MetricsBatch {
  struct ak_span id;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_MetricsBatch {
  struct ak_str id;
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_efix_Pair {
  struct ak_str key;
  int32_t value;
  uint32_t presence;
};
struct ak_dfix_Pair {
  struct ak_span key;
  int32_t value;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_ufix_Pair {
  struct ak_str key;
  int32_t value;
  struct ak_blob unknown;
  uint32_t presence;
};
struct ak_evt_TaskDetailed {
  ak_loop_f loop_parent_task_ids;
  ak_loop_f loop_data_dependencies;
  ak_loop_f loop_expected_output_ids;
  ak_loop_f loop_retry_of_ids;
  ak_loop_f loop_options_options;
};
struct ak_dvt_TaskDetailed {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_TaskDetailed *);
  void (*add_parent_task_ids)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_data_dependencies)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_expected_output_ids)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_retry_of_ids)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_options_options)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_TaskOptionsOptionsEntry *, int32_t);
};
struct ak_evt_TaskSummary {
  ak_loop_f loop_options_options;
};
struct ak_dvt_TaskSummary {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_TaskSummary *);
  void (*add_options_options)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_TaskOptionsOptionsEntry *, int32_t);
};
struct ak_evt_Probe {
  const void *_reserved;  
};
struct ak_dvt_Probe {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_Probe *);
};
struct ak_evt_Empty {
  const void *_reserved;  
};
struct ak_dvt_Empty {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_Empty *);
};
struct ak_evt_UploadResultData {
  const void *_reserved;  
};
struct ak_dvt_UploadResultData {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_UploadResultData *);
};
struct ak_evt_MetricsBatch {
  ak_loop_f loop_ticks;
  ak_loop_f loop_values;
  ak_loop_f loop_codes;
  ak_loop_f loop_flags;
  ak_loop_f loop_statuses;
};
struct ak_dvt_MetricsBatch {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_MetricsBatch *);
  void (*add_ticks)(ak_dec_ctx *, void *, int64_t, const int64_t *, int32_t);
  void (*add_values)(ak_dec_ctx *, void *, int64_t, const double *, int32_t);
  void (*add_codes)(ak_dec_ctx *, void *, int64_t, const int32_t *, int32_t);
  void (*add_flags)(ak_dec_ctx *, void *, int64_t, const uint8_t *, int32_t);
  void (*add_statuses)(ak_dec_ctx *, void *, int64_t, const int32_t *, int32_t);
};
struct ak_evt_Pair {
  const void *_reserved;  
};
struct ak_dvt_Pair {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_Pair *);
};
intptr_t ak_encode_TaskDetailed(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_TaskDetailed *vt, const struct ak_efix_TaskDetailed *fix);
intptr_t ak_uencode_TaskDetailed(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_TaskDetailed *vt, const struct ak_ufix_TaskDetailed *fix);
int32_t ak_decode_TaskDetailed(ak_dec_ctx *ctx, void *obj, const uint8_t *buf, size_t len, const struct ak_dvt_TaskDetailed *vt);
int32_t ak_parse_TaskDetailed(ak_dec_ctx *ctx, const uint8_t *buf, size_t len);
intptr_t ak_encode_TaskSummary(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_TaskSummary *vt, const struct ak_efix_TaskSummary *fix);
intptr_t ak_uencode_TaskSummary(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_TaskSummary *vt, const struct ak_ufix_TaskSummary *fix);
int32_t ak_decode_TaskSummary(ak_dec_ctx *ctx, void *obj, const uint8_t *buf, size_t len, const struct ak_dvt_TaskSummary *vt);
int32_t ak_parse_TaskSummary(ak_dec_ctx *ctx, const uint8_t *buf, size_t len);
intptr_t ak_encode_Probe(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_Probe *vt, const struct ak_efix_Probe *fix);
intptr_t ak_uencode_Probe(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_Probe *vt, const struct ak_ufix_Probe *fix);
int32_t ak_decode_Probe(ak_dec_ctx *ctx, void *obj, const uint8_t *buf, size_t len, const struct ak_dvt_Probe *vt);
int32_t ak_parse_Probe(ak_dec_ctx *ctx, const uint8_t *buf, size_t len);
intptr_t ak_encode_Empty(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_Empty *vt, const struct ak_efix_Empty *fix);
intptr_t ak_uencode_Empty(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_Empty *vt, const struct ak_ufix_Empty *fix);
int32_t ak_decode_Empty(ak_dec_ctx *ctx, void *obj, const uint8_t *buf, size_t len, const struct ak_dvt_Empty *vt);
int32_t ak_parse_Empty(ak_dec_ctx *ctx, const uint8_t *buf, size_t len);
intptr_t ak_encode_UploadResultData(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_UploadResultData *vt, const struct ak_efix_UploadResultData *fix, const uint8_t *direct, size_t direct_len);
intptr_t ak_uencode_UploadResultData(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_UploadResultData *vt, const struct ak_ufix_UploadResultData *fix, const uint8_t *direct, size_t direct_len);
int32_t ak_decode_UploadResultData(ak_dec_ctx *ctx, void *obj, const uint8_t *buf, size_t len, const struct ak_dvt_UploadResultData *vt);
int32_t ak_parse_UploadResultData(ak_dec_ctx *ctx, const uint8_t *buf, size_t len);
intptr_t ak_encode_MetricsBatch(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_MetricsBatch *vt, const struct ak_efix_MetricsBatch *fix);
intptr_t ak_uencode_MetricsBatch(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_MetricsBatch *vt, const struct ak_ufix_MetricsBatch *fix);
int32_t ak_decode_MetricsBatch(ak_dec_ctx *ctx, void *obj, const uint8_t *buf, size_t len, const struct ak_dvt_MetricsBatch *vt);
int32_t ak_parse_MetricsBatch(ak_dec_ctx *ctx, const uint8_t *buf, size_t len);
intptr_t ak_encode_Pair(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_Pair *vt, const struct ak_efix_Pair *fix);
intptr_t ak_uencode_Pair(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_Pair *vt, const struct ak_ufix_Pair *fix);
int32_t ak_decode_Pair(ak_dec_ctx *ctx, void *obj, const uint8_t *buf, size_t len, const struct ak_dvt_Pair *vt);