ffi/poc/csharp/src/Corpus/Generated/Abi.cs

#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_encode_TaskDetailed(void* obj, IntPtr ctx, ak_evt_TaskDetailed* vt, ak_efix_TaskDetailed* fix);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_encode_TaskDetailed(void* obj, IntPtr ctx, ak_evt_TaskDetailed* vt, ak_efix_TaskDetailed* fix);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_uencode_TaskDetailed(void* obj, IntPtr ctx, ak_evt_TaskDetailed* vt, ak_ufix_TaskDetailed* fix);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_uencode_TaskDetailed(void* obj, IntPtr ctx, ak_evt_TaskDetailed* vt, ak_ufix_TaskDetailed* fix);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_decode_TaskDetailed(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_TaskDetailed* vt);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_decode_TaskDetailed(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_TaskDetailed* vt);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_parse_TaskDetailed(IntPtr ctx, byte* buf, nuint len);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_parse_TaskDetailed(IntPtr ctx, byte* buf, nuint len);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_encode_TaskSummary(void* obj, IntPtr ctx, ak_evt_TaskSummary* vt, ak_efix_TaskSummary* fix);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_encode_TaskSummary(void* obj, IntPtr ctx, ak_evt_TaskSummary* vt, ak_efix_TaskSummary* fix);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_uencode_TaskSummary(void* obj, IntPtr ctx, ak_evt_TaskSummary* vt, ak_ufix_TaskSummary* fix);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_uencode_TaskSummary(void* obj, IntPtr ctx, ak_evt_TaskSummary* vt, ak_ufix_TaskSummary* fix);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_decode_TaskSummary(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_TaskSummary* vt);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_decode_TaskSummary(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_TaskSummary* vt);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_parse_TaskSummary(IntPtr ctx, byte* buf, nuint len);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_parse_TaskSummary(IntPtr ctx, byte* buf, nuint len);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_encode_Probe(void* obj, IntPtr ctx, ak_evt_Probe* vt, ak_efix_Probe* fix);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_encode_Probe(void* obj, IntPtr ctx, ak_evt_Probe* vt, ak_efix_Probe* fix);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_uencode_Probe(void* obj, IntPtr ctx, ak_evt_Probe* vt, ak_ufix_Probe* fix);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_uencode_Probe(void* obj, IntPtr ctx, ak_evt_Probe* vt, ak_ufix_Probe* fix);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_decode_Probe(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_Probe* vt);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_decode_Probe(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_Probe* vt);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_parse_Probe(IntPtr ctx, byte* buf, nuint len);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_parse_Probe(IntPtr ctx, byte* buf, nuint len);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_encode_Empty(void* obj, IntPtr ctx, ak_evt_Empty* vt, ak_efix_Empty* fix);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_encode_Empty(void* obj, IntPtr ctx, ak_evt_Empty* vt, ak_efix_Empty* fix);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_uencode_Empty(void* obj, IntPtr ctx, ak_evt_Empty* vt, ak_ufix_Empty* fix);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_uencode_Empty(void* obj, IntPtr ctx, ak_evt_Empty* vt, ak_ufix_Empty* fix);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_decode_Empty(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_Empty* vt);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_decode_Empty(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_Empty* vt);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_parse_Empty(IntPtr ctx, byte* buf, nuint len);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_parse_Empty(IntPtr ctx, byte* buf, nuint len);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_encode_UploadResultData(void* obj, IntPtr ctx, ak_evt_UploadResultData* vt, ak_efix_UploadResultData* fix, byte* direct, nuint direct_len);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_encode_UploadResultData(void* obj, IntPtr ctx, ak_evt_UploadResultData* vt, ak_efix_UploadResultData* fix, byte* direct, nuint direct_len);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_uencode_UploadResultData(void* obj, IntPtr ctx, ak_evt_UploadResultData* vt, ak_ufix_UploadResultData* fix, byte* direct, nuint direct_len);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_uencode_UploadResultData(void* obj, IntPtr ctx, ak_evt_UploadResultData* vt, ak_ufix_UploadResultData* fix, byte* direct, nuint direct_len);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_decode_UploadResultData(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_UploadResultData* vt);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_decode_UploadResultData(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_UploadResultData* vt);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_parse_UploadResultData(IntPtr ctx, byte* buf, nuint len);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_parse_UploadResultData(IntPtr ctx, byte* buf, nuint len);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_encode_MetricsBatch(void* obj, IntPtr ctx, ak_evt_MetricsBatch* vt, ak_efix_MetricsBatch* fix);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_encode_MetricsBatch(void* obj, IntPtr ctx, ak_evt_MetricsBatch* vt, ak_efix_MetricsBatch* fix);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_uencode_MetricsBatch(void* obj, IntPtr ctx, ak_evt_MetricsBatch* vt, ak_ufix_MetricsBatch* fix);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_uencode_MetricsBatch(void* obj, IntPtr ctx, ak_evt_MetricsBatch* vt, ak_ufix_MetricsBatch* fix);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_decode_MetricsBatch(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_MetricsBatch* vt);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_decode_MetricsBatch(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_MetricsBatch* vt);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_parse_MetricsBatch(IntPtr ctx, byte* buf, nuint len);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern int ak_parse_MetricsBatch(IntPtr ctx, byte* buf, nuint len);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_encode_Pair(void* obj, IntPtr ctx, ak_evt_Pair* vt, ak_efix_Pair* fix);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_encode_Pair(void* obj, IntPtr ctx, ak_evt_Pair* vt, ak_efix_Pair* fix);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial nint ak_uencode_Pair(void* obj, IntPtr ctx, ak_evt_Pair* vt, ak_ufix_Pair* fix);
#else
    [DllImport(Lib, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern nint ak_uencode_Pair(void* obj, IntPtr ctx, ak_evt_Pair* vt, ak_ufix_Pair* fix);
#endif
#if NET7_0_OR_GREATER
    [LibraryImport(Lib)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    internal static partial int ak_decode_Pair(IntPtr ctx, void* obj, byte* buf, nuint len, ak_dvt_Pair* vt);
